@@ -16,5 +16,13 @@ module UrlHelper
     def frame_elements
       "#{files}/frames.html"
     end
+
+    def iframe_elements
+      "#{files}/iframes.html"
+    end
+
+    def nested_frame_elements
+      "#{files}/nested_frames.html"
+    end
   end
 end
